# pyspoti

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/pyspoti/: __init__.py
src/pyspoti/app/: cli.py  display.py  images.py  navigator.py
src/pyspoti/core/: __init__.py  api.py  client.py  transforms.py
