[project]
name = "pyspoti"
version = "0.1.1"
description = "Python library and CLI for Spotify data"
readme = "README.md"
authors = [
    { name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests",
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "urllib3",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gabriel-jung/pyspoti"
Repository = "https://github.com/gabriel-jung/pyspoti"

[project.scripts]
spotify = "pyspoti.app.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
