[build-system]
requires = ["uv-build>=0.10.12,<0.12.0"]
build-backend = "uv_build"


[project]
name = "pyspoti"
version = "0.2.0"
description = "Python library and CLI for Spotify data"
readme = "README.md"
authors = [
    { name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["spotify", "cli", "music", "tui", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.32.0",
    "loguru>=0.7.3",
    "rich-metadata>=0.1.0",
    "python-dotenv>=1.0.0",
]


[project.urls]
Homepage = "https://github.com/gabriel-jung/pyspoti"
Repository = "https://github.com/gabriel-jung/pyspoti"
"Bug Tracker" = "https://github.com/gabriel-jung/pyspoti/issues"


[project.scripts]
pyspoti = "pyspoti.app.cli:main"


[tool.ruff]
target-version = "py312"
line-length = 110


[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022", "B904"]


[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]